[tool.poetry]
name = "loady"
version = "1.8.12"
description = "Load Python libraries, JSON and raw text dynamically from git"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
