[project]
name = "loady"
version = "1.8.12"
description = "ðŸ› Load Python code and data from git ðŸ›"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "wheel>=0.38.4,<0.39",
    "gitpython>=3.1.30,<4",
    "beautifulsoup4>=4.11.1,<5",
    "requests>=2.28.2,<3",
    "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
    "flake8==5.0.4",
    "pytest>=7.2.1,<8",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


[tool.mypy]
strict = true
